// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start footer"
>
  <div
    className="flex-20 flex-gt-sm-20 layout-row layout-wrap layout-align-center-center banner_text"
  >
    <div
      className="flex-100 flex-gt-sm-100 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none"
      >
        Powered by
      </h4>
      <a
        className="layout-row flex-none layout-align-start-center"
        href="https://www.itsmycargo.com/"
        target="_blank"
      >
        <img
          alt=""
          className="flex-none pointy powered_by_logo"
          src="https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png"
        />
      </a>
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-25 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Contact
      </h4>
    </div>
    <div
      className="flex-100 layout-row layout-wrap contacts"
    >
      <a
        className="pointy flex-100 layout-row layout-align-start-center"
        href="mailto:support@demo.com"
      >
        <i
          aria-hidden="true"
          className="fa fa-envelope"
        />
        support@demo.com
      </a>
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <i
          aria-hidden="true"
          className="fa fa-phone"
        />
        ORGANIZATION_SUPPORT_PHONE
      </div>
      <div
        className="flex-100 layout-row social_links"
      />
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Company
      </h4>
    </div>
    <FooterLinks
      t={[Function]}
      tenant={
        Object {
          "emails": Object {
            "sales": Object {
              "air": "sales@demo.com",
              "general": "sales@demo.com",
              "ocean": "sales@demo.com",
              "rail": "sales@demo.com",
            },
            "support": Object {
              "air": "imc.air@demo.com",
              "general": "support@demo.com",
              "ocean": "imc.sea@demo.com",
              "rail": "imc.rail@demo.com",
            },
          },
          "id": 123,
          "name": "ORGANIZATION_NAME",
          "phones": Object {
            "support": "ORGANIZATION_SUPPORT_PHONE",
          },
          "scope": Object {
            "cargo_info_level": "text",
            "carriage_options": Object {
              "on_carriage": Object {
                "export": "mandatory",
                "import": "mandatory",
              },
              "pre_carriage": Object {
                "export": "optional",
                "import": "optional",
              },
            },
            "closed_quotation_tool": true,
            "customs_export_paper": false,
            "detailed_billing": true,
            "has_customs": true,
            "has_insurance": true,
            "hide_grand_total": true,
            "mandatory_form_fields": Object {
              "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
              "total_goods_value": 3370,
            },
            "modes_of_transport": Object {
              "air": Object {
                "AIR_LOAD_TYPE": 0,
              },
              "ocean": Object {
                "OCEAN_LOAD_TYPE": 2,
              },
              "rail": Object {
                "RAIL_LOAD_TYPE": 0,
              },
              "truck": Object {
                "TRUCK_LOAD_TYPE": 0,
              },
            },
            "terms": Array [
              "FOO_TERM",
              "BAR_TERM",
            ],
          },
          "subdomain": "ORGANIZATION_SUBDOMAIN",
          "theme": Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          },
        }
      }
    />
  </div>
  <div
    className=" flex-50 flex-gt-sm-20 flex-order--4 flex-order-gt-sm-4 layout-row layout-wrap layout-align-start-start "
  >
    <div
      className="flex-100 layout-row layout-align-start"
    >
      <SquareButton
        active={true}
        back={false}
        border={false}
        classNames=""
        disabled={false}
        handleDisabled={null}
        handleNext={null}
        icon=""
        iconClass=""
        size="small"
        text="Find Rates"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`tenant is falsy 1`] = `""`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-center-start footer"
>
  <div
    className="flex-20 flex-gt-sm-20 layout-row layout-wrap layout-align-center-center banner_text"
  >
    <div
      className="flex-100 flex-gt-sm-100 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none"
      >
        Powered by
      </h4>
      <a
        className="layout-row flex-none layout-align-start-center"
        href="https://www.itsmycargo.com/"
        target="_blank"
      >
        <img
          alt=""
          className="flex-none pointy powered_by_logo"
          src="https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png"
        />
      </a>
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-25 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Contact
      </h4>
    </div>
    <div
      className="flex-100 layout-row layout-wrap contacts"
    >
      <a
        className="pointy flex-100 layout-row layout-align-start-center"
        href="mailto:support@demo.com"
      >
        <i
          aria-hidden="true"
          className="fa fa-envelope"
        />
        support@demo.com
      </a>
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <i
          aria-hidden="true"
          className="fa fa-phone"
        />
        ORGANIZATION_SUPPORT_PHONE
      </div>
      <div
        className="flex-100 layout-row social_links"
      />
    </div>
  </div>
  <div
    className="flex-25 flex-gt-sm-25 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-wrap layout-row"
    >
      <h4
        className="title"
      >
        Company
      </h4>
    </div>
    <FooterLinks
      t={[Function]}
      tenant={
        Object {
          "emails": Object {
            "sales": Object {
              "air": "sales@demo.com",
              "general": "sales@demo.com",
              "ocean": "sales@demo.com",
              "rail": "sales@demo.com",
            },
            "support": Object {
              "air": "imc.air@demo.com",
              "general": "support@demo.com",
              "ocean": "imc.sea@demo.com",
              "rail": "imc.rail@demo.com",
            },
          },
          "id": 123,
          "name": "ORGANIZATION_NAME",
          "phones": Object {
            "support": "ORGANIZATION_SUPPORT_PHONE",
          },
          "scope": Object {
            "cargo_info_level": "text",
            "carriage_options": Object {
              "on_carriage": Object {
                "export": "mandatory",
                "import": "mandatory",
              },
              "pre_carriage": Object {
                "export": "optional",
                "import": "optional",
              },
            },
            "closed_quotation_tool": true,
            "customs_export_paper": false,
            "detailed_billing": true,
            "has_customs": true,
            "has_insurance": true,
            "hide_grand_total": true,
            "mandatory_form_fields": Object {
              "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
              "total_goods_value": 3370,
            },
            "modes_of_transport": Object {
              "air": Object {
                "AIR_LOAD_TYPE": 0,
              },
              "ocean": Object {
                "OCEAN_LOAD_TYPE": 2,
              },
              "rail": Object {
                "RAIL_LOAD_TYPE": 0,
              },
              "truck": Object {
                "TRUCK_LOAD_TYPE": 0,
              },
            },
            "terms": Array [
              "FOO_TERM",
              "BAR_TERM",
            ],
          },
          "subdomain": "ORGANIZATION_SUBDOMAIN",
          "theme": Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          },
        }
      }
    />
  </div>
  <div
    className=" flex-50 flex-gt-sm-20 flex-order--4 flex-order-gt-sm-4 layout-row layout-wrap layout-align-start-start "
  >
    <div
      className="flex-100 layout-row layout-align-start"
    >
      <SquareButton
        active={true}
        back={false}
        border={false}
        classNames=""
        disabled={false}
        handleDisabled={null}
        handleNext={null}
        icon=""
        iconClass=""
        size="small"
        text="Find Rates"
        theme={null}
      />
    </div>
  </div>
</div>
`;
